# faker_companies

./: Procfile  README.md  manage.py  pyproject.toml  requirements.txt
faker_companies/: urls.py  wsgi.py
faker_companies/companies/: views.py
faker_companies/config/: common.py  local.py
